manifest/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
      matchLabels:
        app: logoutput
  template:
      metadata:
        labels:
            app: logoutput
      spec:
        volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
        containers:
        - name: logoutput
          image: EXCERSISES/PING_PONG
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 3004
          volumeMounts: 
            - name: config-volume
              mountPath: /usr/app/information
              readOnly: true
