manifest/DeploymentPong.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: zelhs/ping-pong-application:4.1
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 3003
