manifest/RolloutPong.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: exercises
  name: ping-pong-rollout
spec:
  replicas: 1
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {duration: 1m}
        - analysis:
            templates:
            - templateName: cpu-usage-check
        - setWeight: 100
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: EXCERSISES/RANDOM_STRING
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3003
