manifest/StatefullSetPorsgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exercises
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgressapp
  template:
    metadata:
      labels:
        app: postgressapp
    spec:
      containers:
        - name: postgresscontainer
          image: postgres:15
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
