manifest/ClusterIPServicePong.yml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2020
      protocol: TCP
      targetPort: 3003
