manifest/HeadlessClusterIP.yml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: postgres-svc
  labels:
    app: postgresapp
spec:
  ports:
  - port: 5432
    name: postgres-port
  clusterIP: None
  selector:
    app: postgresapp
