manifest/KnativeLogoutput.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: logoutput
  namespace: exercises
spec:
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - image: EXCERSISES/RANDOM_STRING
          name: logoutput
          env:
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_HOST
            - name: POSTGRES_PORT
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PORT
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_DB
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config-volume
              mountPath: /usr/app/information
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
