manifest/KnativePingPong.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong
spec:
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: EXCERSISES/PING_PONG
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /usr/app/information
              readOnly: true
          env:
            - name: SERVER_PORT
              value: "8080"
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_HOST
            - name: POSTGRES_PORT
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PORT
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_DB
            - name: GREETER_URL
              value: http://greeter.exercises.svc.cluster.local
      # Allow longer grace period for database operations
      timeoutSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
  traffic:
    - percent: 100
      latestRevision: true
