manifest/loadBalancerServices.yml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: logoutput-svc
spec:
  type: LoadBalancer      
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3004

---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  type: LoadBalancer     
  selector:
    app: ping-pong
  ports:
    - port: 2020
      protocol: TCP
      targetPort: 3003
