manifest/HttpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: logoutput-httproute
spec:
  parentRefs:
  - name: my-gateway   
    namespace: exercises
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /pingpong
          statusCode: 302
  - matches:
    - path:
        type: PathPrefix
        value: /increasePingPongs
    backendRefs:
    - name: ping-pong-svc
      port: 2020
  - matches:
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-svc
      port: 2020
