manifest/IngressService.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - http:
      paths:
      - path: /getString
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345
      # - path: /pingpong
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: ping-pong-svc
      #       port:
      #         number: 2020
